# vysual

./: .gitignore  .python-version  README.md  setup.cfg  setup.py
src/gui/: __init__.py
src/vysual/: __init__.py  __main__.py
tests/appX/: main.py
tests/appX/controller/: about.py  main.py
tests/appX/model/: main.py
tests/appX/view/: about.xml  main.xml
