[metadata]
name = vysual
version = 0.0.1
author = Samuel Corradi
author_email = samuelcorradi@gmail.com
description = Visual interface like a charm in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samuelcorradi/vysual
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.1

[options.packages.find]
where = src